RESOLVED FIXED26482
Media element doesn't resume playing after playbackRate set to 0
https://bugs.webkit.org/show_bug.cgi?id=26482
Summary Media element doesn't resume playing after playbackRate set to 0
Eric Carlson
Reported 2009-06-17 10:00:31 PDT
When the playbackRate of a media element that is currently playing is set to 0, playback stops and "paused" returns false (good so far). Changing the playbackRate to a non-zero value should resume playback, but it does not. * STEPS TO REPRODUCE 1. Open the attached example 2. Provide an audio file and change the src attribute on the audio element 3. Start playing your audio sample. 4. Play with the slider to change the playbackRate. 5. Move the slider from positive to negative, passing through zero. 6. Notice that once you've passed through zero, to -1 for example, the element does not continue playing. It should!
Attachments
test case (1.27 KB, text/html)
2009-06-17 10:00 PDT, Eric Carlson
no flags
proposed patch (1.90 KB, patch)
2009-06-17 10:56 PDT, Eric Carlson
mitz: review+
Eric Carlson
Comment 1 2009-06-17 10:00:55 PDT
Created attachment 31419 [details] test case
Eric Carlson
Comment 2 2009-06-17 10:01:30 PDT
Eric Carlson
Comment 3 2009-06-17 10:56:19 PDT
Created attachment 31421 [details] proposed patch
Eric Carlson
Comment 4 2009-06-17 11:28:47 PDT
Note You need to log in before you can comment on or make changes to this bug.