third_party/WebKit/WebCore/platform/graphics/mac/MediaPlayerPrivateQTKit.mm
@@ -608,8 +608,7 @@ void MediaPlayerPrivate::setRate(float rate)
 {
     if (!metaDataAvailable())
         return;
-    if (!paused())
-        [m_qtMovie.get() setRate:rate];
+    [m_qtMovie.get() setRate:rate];
 }
 
 int MediaPlayerPrivate::dataRate() const
