third_party/WebKit/WebCore/platform/graphics/win/MediaPlayerPrivateQuickTimeWin.cpp
@@ -253,8 +253,7 @@ void MediaPlayerPrivate::setRate(float rate)
 {
     if (!m_qtMovie)
         return;
-    if (!paused())
-        m_qtMovie->setRate(rate);
+    m_qtMovie->setRate(rate);
 }
 
 int MediaPlayerPrivate::dataRate() const
